<resources>
    <string name="app_name">Ezytopup</string>
    <string name="facebook_app_id" translatable="false">1116354245082432</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1116354245082432</string>
    <string name="tab_home">Home</string>
    <string name="tab_popular">Popular</string>
    <string name="tab_history">History</string>
    <string name="tab_search">Search</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_title">Title</string>
    <string name="title_address">Address</string>
    <string name="title_social_media">Social Media</string>
    <string name="sub_title_facebook">Facebook</string>
    <string name="sub_title_twitter">Twitter</string>
    <string name="sub_title_instagram">Instagram</string>
    <string name="title_support">Support</string>
    <string name="sub_title_web">Web</string>
    <string name="sub_title_email">Email</string>
    <string name="sub_title_phone">Phone</string>
    <string name="title_feedback_form">Feedback Form</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="prompt_your_name">Your Name</string>
    <string name="prompt_your_email">Your Email</string>
    <string name="prompt_your_phone">Your Phone</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_messages">Messages</string>
    <string name="title_fill_the_information">Please fill the Information</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_get_your_password">Get Your Password</string>
    <string name="action_back">Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="signup_fb">Sign Up With Facebook</string>
    <string name="logout_fb">Logout From Facebook</string>
    <string name="signup">Sign up</string>
    <string name="store_setting">Store Setting</string>
    <string name="store_logo_path">file:///</string>
    <string name="settings_def_storename_label">Store Name</string>
    <string name="settings_def_storename_key" translatable="false">def_store_name</string>
    <string name="settings_def_storename_default" translatable="false">@string/app_name</string>
    <string name="settings_def_storelogo_label">Store Logo</string>
    <string name="settings_def_storelogo_key" translatable="false">def_store_logo</string>
    <string name="settings_def_storelogo_default" translatable="false">@string/store_logo_path</string>
    <string name="settings_def_uid">ID</string>
    <string name="settings_def_uid_key" translatable="false">def_store_id</string>
    <string name="settings_def_uid_default" translatable="false">-</string>
    <string name="settings_def_storefirst_name_label">First Name</string>
    <string name="settings_def_storefirst_name_key" translatable="false">def_first_name</string>
    <string name="settings_def_storefirst_name_default">-</string>
    <string name="settings_def_storelast_name_label">Last Name</string>
    <string name="settings_def_storelast_name_key" translatable="false">def_last_name</string>
    <string name="settings_def_storelast_name_default">-</string>
    <string name="settings_def_storeemail_label">E-mail</string>
    <string name="settings_def_storeemail_key" translatable="false">def_email</string>
    <string name="settings_def_storeemail_default" translatable="false">-</string>
    <string name="settings_def_storephone_number_label">Phone Number</string>
    <string name="settings_def_storephone_number_key" translatable="false">def_phone_number</string>
    <string name="settings_def_storephone_number_default" translatable="false">-</string>
    <string name="settings_def_storeaccess_token_label">Access token</string>
    <string name="settings_def_storeaccess_token_key" translatable="false">def_access_token</string>
    <string name="settings_def_storeaccess_token_default" translatable="false">-</string>
    <string name="settings_def_storeimage_user_label">User Image</string>
    <string name="settings_def_storeimage_user_key" translatable="false">def_image_user</string>
    <string name="settings_def_storeimage_user_default" translatable="false">-</string>
    <string name="settings_def_storeidevice_label">Device id</string>
    <string name="settings_def_storeidevice_key" translatable="false">def_deviceid</string>
    <string name="settings_def_storeidevice_default" translatable="false">-</string>
    <string name="settings_def_sellershopname_label">Shop name</string>
    <string name="settings_def_sellershopname_key" translatable="false">def_sellershopname</string>
    <string name="settings_def_sellershopname_default" translatable="false">-</string>
    <string name="settings_def_sellerkasirname_label">Cashier name</string>
    <string name="settings_def_sellerkasirname_key" translatable="false">def_sellerkasirname</string>
    <string name="settings_def_sellerkasirname_default" translatable="false">-</string>
    <string name="settings_def_sellerphone_label">Seller phone</string>
    <string name="settings_def_sellerphone_key" translatable="false">def_sellerphone</string>
    <string name="settings_def_sellerphone_default" translatable="false">-</string>
    <string name="settings_def_selleraddress_label">Seller address</string>
    <string name="settings_def_selleraddress_key" translatable="false">def_selleraddress</string>
    <string name="settings_def_selleraddress_default" translatable="false">-</string>
    <string name="settings_def_sellerwebsite_label">Seller website</string>
    <string name="settings_def_sellerwebsite_key" translatable="false">def_sellerwebsite</string>
    <string name="settings_def_sellerwebsite_default" translatable="false">-</string>
    <string name="settings_def_sellerlogo_label">Seller logo</string>
    <string name="settings_def_sellerlogo_key" translatable="false">def_sellerlogo</string>
    <string name="settings_def_sellerlogo_default" translatable="false">-</string>
    <string name="settings_def_sellerprintlogo_label">Seller print logo</string>
    <string name="settings_def_sellerprintlogo_key" translatable="false">def_sellerprintlogo</string>
    <string name="settings_def_sellerprintlogo_default" translatable="false">-</string>
    <string name="settings_def_sellerwarnabg_label">Seller color background</string>
    <string name="settings_def_sellerwarnabg_key" translatable="false">def_sellerwarnabg</string>
    <string name="settings_def_sellerwarnabg_default" translatable="false">-</string>
    <string name="settings_def_sellerid_label">Seller id</string>
    <string name="settings_def_sellerid_key" translatable="false">def_sellerid</string>
    <string name="settings_def_sellerid_default" translatable="false">-</string>
    <string name="print">Print</string>
    <string name="action_print_invoice">Print invoice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="re_print">Reprint</string>
    <string name="dummy_titlecard">Steam wallet IDR 600,000 (Digital) Gameschool</string>
    <string name="dummy_price1">Rp 718,000</string>
    <string name="max_lines_item_titles" translatable="false">3</string>
    <string name="inbox">Inbox</string>
    <string name="faq">FAQ</string>
    <string name="term_and_condition">Term and condition</string>
    <string name="ezytopup_guide">Ezytopup guide</string>
    <string name="tutorial">Tutorials</string>
    <string name="contactus">Contact us</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="dummy_category">Playstation network</string>
    <string name="add_tocart">Add to cart</string>
    <string name="dismiss">Dismiss</string>
    <string name="progress_title_default">Please wait...</string>
    <string name="close">Close</string>
    <string name="faq_1">Frequently asked questions</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="addminfee">Admin fee</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="fill_information">Fill the information</string>
    <string name="enter_emailaddress">Enter your email address here</string>
    <string name="select_payment">Select payment</string>
    <string name="my_email">My email</string>
    <string name="detail_product">Detail product</string>
    <string name="share">Share</string>
    <string name="realtime_delivery">Realtime delivery</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="buy">Buy</string>
    <string name="keyword">Keyword</string>
    <string name="search">Search</string>
    <string name="dummy_date">15/04/2017</string>
    <string name="payment">Payment</string>
    <string name="payment_buy">Payment :</string>
    <string name="date">Date</string>
    <string name="dummy_email">indra.agus@kiranatama.com</string>
    <string name="status">Status</string>
    <string name="transfer_bank">Transfer otomatis PermataBank</string>
    <string name="ezzy_wallet">Ezytopup Wallet</string>
    <string name="note">Note :</string>
    <string name="cancel">Cancel</string>
    <string name="buy_now">Buy now</string>
    <string name="select_payment_method">Please select payment method</string>
    <string name="listempty">List is empty</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name here</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter your phone here</string>
    <string name="password">Password</string>
    <string name="password_hint">At least 8 characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="loading">Loading...</string>
    <string name="skip">Skip login</string>
    <string name="logout">logout</string>
    <string name="change_password">Change password</string>
</resources>