<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_arrow_signup24dp"
            android:title="@string/signup" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_arrow_login_24dp"
            android:title="@string/login" />
    </group>

    <group>
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:title="@string/faq" />
            <item
                android:id="@+id/nav_term"
                android:title="@string/term_and_condition" />
            <item
                android:id="@+id/nav_guide"
                android:title="@string/ezytopup_guide" />
            <item
                android:id="@+id/nav_tutorial"
                android:title="@string/tutorial" />
            <item
                android:id="@+id/nav_contactus"
                android:title="@string/contactus" />
            <item
                android:id="@+id/nav_print"
                android:title="@string/print" />
        </menu>
    </group>

</menu>
