<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ezytopup.salesapp.fragment.DetailproductFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/linearLayout2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/detail_info1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/secondary_text"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/detail_info2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/secondary_text"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/detail_info3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/secondary_text"
                tools:text="@string/app_name" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:id="@+id/textView6" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:text="@string/dummy_text" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
